# 3rdparty-oem-plugins

./: COPYING  Makefile.am  Rules-cpp.mak  Rules_shoutcast-po.mak  configure.ac
autobouquetsmaker/lib/: dvbreader.la  dvbreader.lo
autobouquetsmaker/lib/.libs/: dvbreader.la  dvbreader.lai
autobouquetsmaker/po/: AutoBouquetsMaker-py.pot  AutoBouquetsMaker.pot  ar.mo  ar.po  bg.mo  bg.po  ca.mo  ca.po  cs.mo  cs.po  da.mo  da.po  de.mo  de.po  el.mo  el.po  en.mo  en.po  en_GB.mo  en_GB.po  es.mo  es.po  et.mo  et.po  fa.mo  fa.po  fi.mo  fi.po  fr.mo  fr.po  fy.mo  fy.po  he.mo  he.po  hr.mo  hr.po  hu.mo  hu.po  is.mo  is.po  (+36 more)
backupsuite/CONTROL/: control
backupsuite/src/: Makefile.am
backupsuite/src/BackupSuite-HDD/: Makefile.am  backupsuite.sh  message.py  plugin.py
backupsuite/src/BackupSuite-HDD/locale/: BackupSuite.po  Makefile.am
backupsuite/src/BackupSuite-HDD/locale/de/: Makefile.am
backupsuite/src/BackupSuite-HDD/locale/es/: Makefile.am
backupsuite/src/BackupSuite-USB/: Makefile.am  backup.sh  plugin.py
ondemand/po/: OnDemand-py.pot  OnDemand.pot  ar.mo  ar.po  bg.mo  bg.po  ca.mo  ca.po  cs.mo  cs.po  da.mo  da.po  de.mo  de.po  el.mo  el.po  en.mo  en.po  en_GB.mo  en_GB.po  es.mo  es.po  et.mo  et.po  fa.mo  fa.po  fi.mo  fi.po  fr.mo  fr.po  fy.mo  fy.po  he.mo  he.po  hr.mo  hr.po  hu.mo  hu.po  is.mo  is.po  (+36 more)
permanenttimeshift/po/: PermanentTimeshift-py.pot  PermanentTimeshift.pot
permanenttimeshift/src/eitsave/: eitsave.la  eitsave.lo
permanenttimeshift/src/eitsave/.libs/: eitsave.la
shoutcast/po/: Makefile.am
(+27 files in other folders)
